<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <Spinner
        android:id="@+id/dashboard_node_sellect"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dashboard_name_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/title_dashboard_name_box"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_node_sellect" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dashboard_name_box"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_node_sellect"
        app:layout_constraintVertical_bias="0.509">

        <RadioButton
            android:id="@+id/dashboard_off_button"
            android:layout_width="65dp"
            android:layout_height="27dp"
            android:text="@string/text_off"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dashboard_off_button"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_node_sellect" />

        <RadioButton
            android:id="@+id/dashboard_on_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_on"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toStartOf="@+id/dashboard_on_button"
            app:layout_constraintStart_toEndOf="@+id/dashboard_name_box"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_node_sellect" />

    </RadioGroup>

    <TextView
        android:id="@+id/home_currently_connected_name_box"
        android:layout_width="184dp"
        android:layout_height="19dp"
        android:text="@string/currently_connected_box"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toStartOf="@+id/home_currently_connected_amount_name_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_node_sellect"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/home_currently_connected_amount_name_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/connected_amount_box"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_currently_connected_name_box"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_node_sellect"
        app:layout_constraintVertical_bias="0.100000024" />

    <ScrollView android:layout_height="0dp" android:layout_width="match_parent"
                android:id="@+id/scrollView" android:fillViewport="true"
                android:layout_weight="8"> </ScrollView>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_name"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_rssi"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_macaddr"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <Button android:layout_height="0dp" android:layout_width="match_parent"
            android:id="@+id/btn_scan" android:layout_weight="1" android:text="Start Scan"/>

</android.support.constraint.ConstraintLayout>